--- a/extension/popup.css
+++ b/extension/popup.css
@@ -1,3 +1,9 @@
 .container {
     min-width: 500px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+#article-title {
+    margin-bottom: 10px;
 }
